Issue 47264: Clinical history overflow cutoff when printing (#539)
* Back out changes from first fix attempt
* Add new CSS rules to ensure overflow is visible in ext4 panels
* Apply CSS class in export clinical history page

--- a/ehr/resources/web/ehr/stylesheet.css
+++ b/ehr/resources/web/ehr/stylesheet.css
@@ -200,3 +200,19 @@ a:hover .ehr-tool-icon-lg {
 .x-status-error-list li a {
     color: #15428B;
 }
+
+.x4-panel.clinical-history-print {
+    overflow: visible !important;
+}
+
+.x4-panel-body.clinical-history-print {
+    overflow: visible !important;
+}
+
+.clinical-history-print .x4-panel{
+    overflow: visible !important;
+}
+
+.clinical-history-print .x4-panel-body{
+    overflow: visible !important;
+}
